Finished Saturn page

--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -68,6 +68,20 @@
                 </li>
                 <li>
                     <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#ShapeAndSize">Shape and size</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructure">Internal structure</a>
+                        </li>
+                        <li>
+                            <a href="#Atmosphere">Atmosphere</a>
+                        </li>
+                        <li>
+                            <a href="#RingSystem">Ring system</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#Moons">Moons</a>
@@ -147,7 +161,7 @@
             <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
             <p class="paragraph">
                 The average distance from the Sun is 9 AU.
-                The perihelion and aphelion distances are, respectively, 9.195 and 9.957 AU
+                The perihelion and aphelion distances are, respectively, 9.195 and 9.957 AU
                 It takes Saturn 10,759 Earth days to finish one revolution around the Sun.
             </p>
             <p class="paragraph">
@@ -160,10 +174,38 @@
             <p class="paragraph">
             </p>
             <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <h3 class="paragraphsubheader" id="ShapeAndSize">Shape and size</h3>
             <p class="paragraph">
                 Saturn is an oblate spheroid with an average radius of about nine and a half times that of <a href="earth.html">Earth</a>.
                 It is the most flattened of all the planets at 9.8%.
             </p>
+            <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+            <p class="paragraph">
+                Saturn's structure is similar to <a href="jupiter.html">Jupiter</a> - the core is composed of silicates (rock), surrounded by metallic hydrogen.
+                The interior contains liquid hydrogen and the outer atmosphere is gaseous.
+                It is suggested that diamond rains occur in the interior of giants, including Saturn.
+            </p>
+            <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
+            <p class="paragraph">
+                The outer atmosphere contains 96.35 hydrogen and 3.25% helium.
+                Trace amounts of ammonia, acetylene and hydrocarbons have been detected.
+            </p>
+            <p class="paragraph">
+                Saturnian features in the atmosphere like bands and storms are less aparent than on Jupiter.
+                Clouds on Saturn consost of different elements based on  their latitude.
+                Upper cloud layers feature ammonia ice clouds, while lower layers contain water ice and ammonium hydrosulfide ice clouds.
+                At the lowest layers, water and ammonia droplets in aqueous solution form at 10 - 20 bar.
+                Storms on Saturn are short-lived, an example is a so-called "Great White Spot".
+                Vortexes persist at the poles.
+                The one at the north pole is hexagonally-shaped and the south pole reaches -122 °C, far warmer than the average -185 °C.
+            </p>
+            <h3 class="paragraphsubheader" id="RingSystem">Ring system</h3>
+                <p class="paragraph">
+                    The Saturnian rings are the most prominent and most extensive, first seen by Galileo Galilei and identified by Cristiaan Huygens.
+                    They are composed predominantly of water ice, tholin impurities and amorphous carbon.
+                    The main rings are D Ring, C Ring, B Ring, Cassini Division, A Ring and the thin F Ring.
+                    Other minor outer rings are named after satellites orbiting them.
+                </p>
             <h2 class="paragraphheader" id="Moons">Moons</h2>
             <p class="paragraph">
                 There are 83 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
@@ -179,7 +221,7 @@
                 </div>
                 <h3 class="paragraphsubheader" id="Titan">Titan</h3>
                 <p class="paragraph">
-                    Titan is the biggest satellite orbiting Saturn and is one of two satellites bigger than the planet <a href="mercury.html">Mercury</a>, the other being the Jovian moon Ganymede. 
+                    Titan is the biggest satellite orbiting Saturn and is one of two satellites bigger than the planet Mercury, the other being the Jovian moon Ganymede. 
                     Titan has a thick orange athmosphere composed mostly of nitrogen and methane. 
                     Liquid methane lakes are concentrated around the poles, the only possible spots on the surface for them to form.
                     The biggest lakes are Kraken Mare and Ligeia Mare.
