Images, video, responsive design edits

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -112,9 +112,9 @@
 
         <section class="maincontent">
             <div class="articlediv">
-                <div class="captionbox right">
+                <div class="captionbox right" style="width:242px;">
                     <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth" width="240" height="240">
-                    <p class="caption">Earth</p>
+                    <p class="caption">"The Blue Marble" - Earth seen by Apollo 17</p>
                 </div>
                 <p class="paragraph">
                     Earth is a <a href="planet.html">planet</a> in the Solar System.
