--- a/pages/mars.html
+++ b/pages/mars.html
@@ -112,7 +112,7 @@
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars" width="240" height="240">
-                    <p class="caption">Mars</p>
+                    <p class="caption">Mars as seen by Rosetta</p>
                 </div>
                 <p class="paragraph">
                     Mars is the fourth <a href="planet.html">planet</a> from the Sun and the second smallest in the Solar System.   
@@ -171,9 +171,11 @@
                 The core contains iron, nickel and sulfur.
             </p>
             <h3 class="paragraphsubheader" id="Surface">Surface</h3>
-            <div class="captionbox center">
-                <img class="articleimage" src="../assets/images/maps/mars-satellite-map.jpg" alt="Map of Mars" width="512" height="256">
-                <p class="caption">True color satellite map of Mars</p>
+            <div class="articlediv">
+                <div class="captionbox center">
+                    <img class="articleimage" src="../assets/images/maps/mars-satellite-map.jpg" alt="Map of Mars" width="512" height="256">
+                    <p class="caption">True color satellite map of Mars</p>
+                </div>
             </div>
             <div class="articlediv">
                 <div class="captionbox right" style="width:259px">
@@ -195,26 +197,28 @@
                     Many theories exist on what might have caused it's formation, like a tectonic rift, or formed by erosion by liquid water.
                 </p>
             </div>
-            <p class="paragraph">
-                The Martian surface is heavily cratered, but most craters are located in the south.
-                The north contains interconnected low-lying plains like Arcadia Planitia, Acidalia Planitia and Utopia Planitia.
-                This suggests that these plains may have once been covered by a large Martian ocean.
-                Another big plain is Hellas Planitia, which is not connected to the other and is located in the south hemisphere.
-                This is where the lowest point on Mars is.
-            </p>
-            <p class="paragraph">
-                Dark spots on Mars like Syrtis Major are albedo features significantly darker than the surrounding terrain.
-                The dark colors come from the basaltic volcanic rock of the regions and the relative lack of dust. 
-            </p>
-            <div class="captionbox center">
-                <img class="articleimage" src="../assets/images/maps/mars-topography-map.jpg" alt="Topography map of Mars" width="1024" height="585.6" usemap="#marstop">
-                <p class="caption">Clickable topographic map of Mars - Mars Global Surveyor</p>
-                
-                <map name="marstop">
-                    <area shape="rect" coords="134,146,240,343" alt="Tharsis" href="https://en.wikipedia.org/wiki/Tharsis">
-                    <area shape="rect" coords="241,298,404,353" alt="Valles Marineris" href="https://en.wikipedia.org/wiki/Valles_Marineris">
-
-                </map>
+            <div class="articlediv">
+                <p class="paragraph">
+                    The Martian surface is heavily cratered, but most craters are located in the south.
+                    The north contains interconnected low-lying plains like Arcadia Planitia, Acidalia Planitia and Utopia Planitia.
+                    This suggests that these plains may have once been covered by a large Martian ocean.
+                    Another big plain is Hellas Planitia, which is not connected to the other and is located in the south hemisphere.
+                    This is where the lowest point on Mars is.
+                </p>
+                <p class="paragraph">
+                    Dark spots on Mars like Syrtis Major are albedo features significantly darker than the surrounding terrain.
+                    The dark colors come from the basaltic volcanic rock of the regions and the relative lack of dust. 
+                </p>
+                <div class="captionbox center">
+                    <img class="articleimage" src="../assets/images/maps/mars-topography-map.jpg" alt="Topography map of Mars" width="1024" height="585.6" usemap="#marstop">
+                    <p class="caption">Clickable topographic map of Mars - Mars Global Surveyor</p>
+                    
+                    <map name="marstop">
+                        <area shape="rect" coords="134,146,240,343" alt="Tharsis" href="https://en.wikipedia.org/wiki/Tharsis">
+                        <area shape="rect" coords="241,298,404,353" alt="Valles Marineris" href="https://en.wikipedia.org/wiki/Valles_Marineris">
+ 
+                    </map>
+                </div>
             </div>
             <h3 class="paragraphsubheader" id="Hydrology">Hydrology</h3>
             <p class="paragraph">
