--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -214,8 +214,9 @@
                 </div>
             </div>
             <p class="paragraph">
-                The biggest irregular-shaped satellite is Hyperion, and Phoebe is the most massive. 
-                Satellites like Atlas, Pan and Daphnis are called shepherd moons. They have distinct equatorial ridges formed from clearing Saturn's rings.
+                The biggest irregularly-shaped satellite is Hyperion and Phoebe is the most massive. 
+                Satellites like Atlas, Pan and Daphnis are called shepherd moons.
+                They have distinct equatorial ridges formed from clearing Saturn's rings.
             </p>
             <div class="articlediv">
                 <h3 class="paragraphsubheader" id="SatellitesOfUranus">Satellites of Uranus</h3>
