--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -129,7 +129,7 @@
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
-                    <p class="caption">Saturn</p>
+                    <p class="caption">Saturn, seen by the Cassini orbiter</p>
                 </div>
                 <p class="paragraph">
                     Saturn is the sixth from the Sun and second largest of the eight <a href="planet.html">planets</a> in the Solar System. 
@@ -185,27 +185,42 @@
                 The interior contains liquid hydrogen and the outer atmosphere is gaseous.
                 It is suggested that diamond rains occur in the interior of giants, including Saturn.
             </p>
-            <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
-            <p class="paragraph">
-                The outer atmosphere contains 96.35 hydrogen and 3.25% helium.
-                Trace amounts of ammonia, acetylene and hydrocarbons have been detected.
-            </p>
-            <p class="paragraph">
-                Saturnian features in the atmosphere like bands and storms are less aparent than on Jupiter.
-                Clouds on Saturn consost of different elements based on  their latitude.
-                Upper cloud layers feature ammonia ice clouds, while lower layers contain water ice and ammonium hydrosulfide ice clouds.
-                At the lowest layers, water and ammonia droplets in aqueous solution form at 10 - 20 bar.
-                Storms on Saturn are short-lived, an example is a so-called "Great White Spot".
-                Vortexes persist at the poles.
-                The one at the north pole is hexagonally-shaped and the south pole reaches -122 °C, far warmer than the average -185 °C.
-            </p>
-            <h3 class="paragraphsubheader" id="RingSystem">Ring system</h3>
+            <div class="articlediv">
+                <div class="captionbox right" style="width:194px;">
+                    <video class="articlevideo" width="192" height="192" controls>
+                        <source src="../assets/videos/saturn-hexagon.ogg" type="video/ogg">
+                        Video is not supported for your browser.
+                    </video>
+                    <p class="caption">A hexagonal cloud at the north pole of Saturn</p>
+                </div>
+               <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
+                <p class="paragraph">
+                    The outer atmosphere contains 96.35 hydrogen and 3.25% helium.
+                    Trace amounts of ammonia, acetylene and hydrocarbons have been detected.
+                </p>
+                <p class="paragraph">
+                    Saturnian features in the atmosphere like bands and storms are less aparent than those on Jupiter.
+                    Clouds on Saturn consost of different elements based on  their latitude.
+                    Upper cloud layers feature ammonia ice clouds, while lower layers contain water ice and ammonium hydrosulfide ice clouds.
+                    At the lowest layers, water and ammonia droplets in aqueous solution form at 10 - 20 bar.
+                    Storms on Saturn are short-lived, an example is a so-called "Great White Spot".
+                    Vortexes persist at the poles.
+                    The one at the north pole is hexagonally-shaped and the south pole reaches -122 °C, far warmer than the average -185 °C.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/other/saturn-rings.png" alt="Rings of Saturn" width="800" height="480">
+                    <p class="caption">Rings of Saturn, seen by the Cassini orbiter</p>
+                </div>
+                <h3 class="paragraphsubheader" id="RingSystem">Ring system</h3>
                 <p class="paragraph">
                     The Saturnian rings are the most prominent and most extensive, first seen by Galileo Galilei and identified by Cristiaan Huygens.
                     They are composed predominantly of water ice, tholin impurities and amorphous carbon.
                     The main rings are D Ring, C Ring, B Ring, Cassini Division, A Ring and the thin F Ring.
                     Other minor outer rings are named after satellites orbiting them.
                 </p>
+            </div>
             <h2 class="paragraphheader" id="Moons">Moons</h2>
             <p class="paragraph">
                 There are 83 <a href="natural-satellite.html">moons</a> known to orbit Saturn. 
@@ -213,6 +228,11 @@
                 Subsequent moons were named after other Greek mythological figures, Celtic and Inuit gods and Norse ice giants.
                 The biggest moon is Titan, a satellite bigger than the planet <a href="mercury.html">Mercury</a>. 
                 Other round moons are Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.
+            </p>
+            <p class="paragraph">
+                Out of the irregularly-shaped satellite, Hyperion is the largest and Phoebe is the most massive. 
+                There are satellites like Atlas, Pan and Daphnis that are refered to as shepherd moons.
+                They have distinct equatorial ridges formed from clearing Saturn's rings.
             </p>
             <div class="articlediv">
                 <div class="captionbox right">
