--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -180,6 +180,7 @@
                 <a href="exoplanet.html">Exoplanets</a> with a similar size are refered to as "Neptunes".
             </p>
             <h3 class="paragraphsubheader" id="InternalStructureAndAtmosphere">Internal structure and atmosphere</h3>
+            <p class="paragraph">
                 Neptune has a similar structure to that of Uranus.
                 The atmosphere at high altitudes consists of 80% hydrogen and 19% helium, with trace amounts of methane.
                 It is the methane that gives the blue color of Neptune.
@@ -191,6 +192,7 @@
                 The Neptunian mantle is made of ices at a state of critical fluids.
                 Water molecules break down into hydrogen and oxygen ions and rains of diamonds are formed from methane under the high pressure
                 The core is likely a supercritical fluid mix of iron, nickel and silicates, 1.2 times more massive than Earth.
+            </p>
             <div class="articlediv">
                 <div class="captionbox right" style="width:263px;">
                     <img class="articleimage" src="../assets/images/features/neptune-spots.jpg" alt="Neptune spots" width="261" height="240">
