Slight edits of pages

--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -115,7 +115,10 @@
                 Many methods are used for detecting exoplanets, from direct imaging to transit and radial detections.
             </p>
             <p class="paragraph">
-                The closest exoplanets are located 4.2 light-years from <a href="earth.html">Earth</a> and orbit Proxima Centauri, the closest star to Earth.</p>
+                The closest exoplanet, Proxima Centauri b, is located 4.2 light-years from <a href="earth.html">Earth</a> and orbits Proxima Centauri, the closest star to Earth.
+                The planet is a potentially habitable, orbiting Proxima in it's habitable zone.
+                Two other candidates may also orbit the star.
+            </p>
             <h2 class="paragraphheader" id="Naming">Naming</h2>
             <p class="paragraph">
                 Exoplanet names are assigned based on the name of a star, with an additional letter at the end of the name. 
@@ -141,6 +144,9 @@
                 Once a planet orbiting a pulsar transits, it will cause slight anomalies in timing. 
                 The method is very precise and can detect planets smaller than <a href="earth.html">Earth</a>, but the rarity of pulsars and exoplanets orbiting them make this method highly unproductive.
             </p>
+            <p class="paragraph">
+                The first exoplanets ever are Draugr, Poltergeist and Phobetor, which orbit the pulsar PSR B1257+12.
+            </p>
             <h3 class="paragraphsubheader" id="Astrometry">Astrometry</h3>
             <p class="paragraph">
                 Planets will influence the position of a star, due to gravity. 
@@ -158,6 +164,9 @@
             <p class="paragraph">
                 The transit time of planets around multiple stars or planets with <a href="natural-satellite.html">moons</a> will vary. 
                 No planet has been detected with this method, but circumbinary planets are successfuly confirmed with transit duration variation.
+            </p>
+            <p class="paragraph">
+                One such planet is Kepler-16b, which orbits two stars - Kepler-16 A and Kepler-16 B.
             </p>
             <h3 class="paragraphsubheader" id="TransitTimingVariation">Transit timing variation</h3>
             <p class="paragraph">
