--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -243,6 +243,9 @@
                     There are 14 known <a href="neptune.html">Neptunian</a> satellites, named after Greek water deities. 
                     The biggest satellite - Triton, is believed to be a dwarf planet caught by the gravitation of Neptune.
                 </p>
+                <p class="paragraph">
+                    The biggest non-planetary satellite in the Solar System is Proteus, which orbits Neptune.
+                </p>
             </div>
             <div class="articlediv">
                 <div class="captionbox right">
