--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -167,7 +167,7 @@
             <p class="paragraph">
                 There are many objects that are farther from the Sun than Neptune, called <a href="tno.html">trans-Neptunian objects</a>.
                 Part of those objects that have a low eccentricity make up the Kuiper belt.
-                Kuiper belt are split into classical (cubewanos) and resonant.
+                Kuiper belt objects are further split into classical (cubewanos) and resonant.
                 The resonant KBOs are in a resonance with Neptune - 1:2 (twotinos), 2:3 (plutinos), 3:4, 3:5, 4:7 or 2:5.
                 Pluto, the largest dwarf planet, is a plutino and because of it's resonance with Neptune, it would not collide despite crossing the Neptunian orbit.
             </p>
