--- a/pages/planet.html
+++ b/pages/planet.html
@@ -181,7 +181,7 @@
                     The second planet in the Solar System - Venus, is slightly smaller than the Earth. 
                     It is named after the Roman goddes of love and beauty. 
                     It is the brightest of the planets on the Earth sky. 
-                    The Venerian surface has a higher temperature than Mercury, due to the greenhouse effect caused by the carbon dioxide-rich athmosphere. 
+                    The Venusian surface has a higher temperature than Mercury, due to the greenhouse effect caused by the carbon dioxide-rich athmosphere. 
                     The surface is shaped by volcanism and craters.
                 </p>
             </div>
