--- a/pages/venus.html
+++ b/pages/venus.html
@@ -59,6 +59,40 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Venus</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Size">Size</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructure">Internal structure</a>
+                        </li>
+                        <li>
+                            <a href="#Surface">Surface</a>
+                        </li>
+                        <li>
+                            <a href="#AtmosphereAndClimate">Atmosphere and climate</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#EarlyObservation">Early observation</a>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+                <li>
+                    <a href="#Habitability">Habitability</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
@@ -72,17 +106,116 @@
             <div class="articlediv">
                 <div class="captionbox right">
                     <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus" width="240" height="240">
-                    <p class="caption">Venus</p>
+                    <p class="caption">Venus, seen by Mariner 10</p>
                 </div>
                 <p class="paragraph">
-                    Venus is the second planet in the Solar System from the Sun.
-                    It is slightly smaller than Earth.
-                    It is named after the Roman goddes of love and beauty. 
-                    It is the brightest of the planets on the Earth sky. 
-                    The Venerian surface has a higher temperature than Mercury, due to the greenhouse effect caused by the carbon dioxide-rich athmosphere. 
-                    The surface is shaped by volcanism and craters.
+                    Venus is the second <a href="planet.html">planet</a> from the Sun in the Solar System.
+                    It is slightly smaller than <a href="earth.html">Earth</a> and is often called a "sister" planet of Earth.
+                    It is the brightest of the planets on the Earth sky, caused by the proximity to the Earth and the high albedo of the atmosphere and clouds. 
+                    Venus is named after the Roman goddes of love and beauty. 
+                </p>
+                <p class="paragraph">
+                    The atmosphere is composed almost entirely of carbon dioxide (96.5%), which heats the planet.
+                    Because of this, the Venusian surface has a higher temperature than <a href="mercury.html">Mercury</a>, the closest planet to Sun. 
+                    Opaque clouds of sulfuric afid cover the planet.
+                </p>
+                <p class="paragraph">
+                    Venus is shaped by volcanism and craters.
+                    The planet does not feature tectonic plates, but has other tectonic features like tesserae - heavily deformed terrain.
+                    Venus contains three highland regions (terrae) - Aphrodite Terra, Ishtar Terra and Lada Terra.
+                </p>
+                <p class="paragraph">
+                    There are no moons orbiting Venus.
+                    The planet also rotates against it's orbital motion, similar to <a href="uranus.html">Uranus</a>.
+                    This makes the planet rotate around it's axis twice a full orbit around the Sun, the slowest of all the planets in the Solar System.
                 </p>
             </div>
+            <h2 class="paragraphheader" id="Name">Name</h2>
+            <p class="paragraph">
+                Venus is an inferior planet to Earth, so it can only be seen as a morning or an evening star.
+                In ancient Greece, the planet was referes to as Phosphorus (Φωσφόρος, "Bringer of Light"), when seen as a morning star, and Hesperus (Ἓσπερος, "Evening star"), when seen as an evening star.
+                They later identified it as a single planet, which they named "Αφροδίτη" after Aphrodite.
+                The Romans still used different names for the morning and evening star - Lucifer and Vesper, which are literal translations of the Greek names.
+                The name Venus was first used in the 13th century.
+            </p>
+            <p class="paragraph">
+                In Chinese the planet used to be referred to as "the Great White" (Tàibái, 太白) and "the Excellent West One" (Chánggēng, 長庚), for the morning and evening stars respectively.
+                Later the planet became known as "metal star" (Jīn-xīng, 金星)
+            </p>
+            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <p class="paragraph">
+                Venus orbits the Sun at an average distance of 0.72 AU and completes an orbit every 224.7 days.
+                The eccentricity of the orbit is 0.01, the closest to a circle of all the planets.
+            </p>
+            <p class="paragraph">
+                Venus is the slowest rotating planet - one day on Venus is 116 days and 18 hours, and the sidereal day is around 243 days, which is longer than a Venusian year.
+                It is also rotating in retrograde, the only other planet to do so is <a href="uranus.html">Uranus</a>.
+                This means that on Venus the Sun will rise from the west and set in the east.
+            </p>
+            <p class="paragraph">
+                There are no natural satellites orbiting Venus.
+                There are however seven trojans co-orbiting with Venus.
+            </p>
+            <h3 class="paragraphsubheader" id="Size">Size</h3>
+            <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <h3 class="paragraphsubheader" id="Size">Size</h3>
+            <p class="paragraph">
+                Venus is a terrestrial planet like <a href="mercury.html">Mercury</a>,<a href="earth.html">Earth</a> and <a href="mars.html">Mars</a>.
+                The diameter of Venus is 12,103.6 km - only 638.4 km less than Earth's.
+                Venus' mass is 81.5% that of Earth's.
+                Because of these similarities, it is sometimes described as Earth's twin planet.
+            </p>
+            <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+            <p class="paragraph">
+                Little is known about the interior of Venus, but the similarities to Earth suggest that the planet has a metal core, a rocky mantle and a crust.
+                The crust does not feature plate tectonics like Earth.
+                This is because on hotter surfaces like Venus, weak spots that are caused by internal factors recover before they connect and create plates.
+            </p>
+            <div class="articlediv">
+                <h3 class="paragraphsubheader" id="Surface">Surface</h3>
+                <p class="paragraph">
+                    Venus contains three highland regions (terrae) - Aphrodite Terra, Ishtar Terra and Lada Terra.
+                    Aphrodite Terra is a continent near the Equator, characterised by fractures.
+                    Ishtar is located near the north Pole, where the highest point - Maxwell Mons - is located.
+                    Lada is a southern region, the smalles of the three.
+                    Other smaller highlands (regio) are scattered across the remaining terrain.
+                    Some examples are Beta Regio and Themis Regio.
+                </p>
+                <p class="paragraph">
+                    Between the highlands are low-lying plains (planitiae).
+                    Structurally, these plains feature numerous ridges, grabens (fossa and linea), fractures, scarps (rupes), troughs, hills (collis), and dikes.
+                </p>
+                <p class="paragraph">
+                    A unique feature for Venus is tessera - heavily deformed terrain.
+                    Tesserae are some of the oldest surfaces on Venus.
+                    Aphrodita Terra, Ishtar Terra, Beta Regio, Phoebe Regio and Alpha Regio are some of the regions where most tesserae are located.
+                </p>
+                <div class="captionbox">
+                    <img class="articleimage" src="../assets/images/maps/venus-topography-map.jpg" alt="Venus topographic map" width="1152.2" height="576">
+                    <p class="caption">Topographic map of Venus, Magellan</p>
+                </div>
+            </div>
+            <h3 class="paragraphsubheader" id="AtmosphereAndClimate">Atmosphere and climate</h3>
+            <p class="paragraph">
+                96.5% of the Venusian atmosphere is composed of carbon dioxide in it's supercritical phase.
+                The remaining 3.5% are nitrogen.
+                The thick carbon dioxide atmosphere heats the planet, creating a greenhouse effect.
+                On average, the temperature is 740 K and the atmosphere is 93 bar.
+            </p>
+            <p class="paragraph">
+                The planet is shrouded in sulfuric acid.
+                These clouds make it impossible for observation of the surface without the help of advanced instruments.
+                Venus' albedo is also high, due to the clouds.
+            </p>
+            <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
+            <p class="paragraph">
+            </p>
+            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+            <p class="paragraph">
+            </p>
+            <h2 class="paragraphheader" id="Habitability">Habitability</h2>
+            <p class="paragraph">
+            </p>
         </section>
 
         <!--A footer-->
