External links and sources

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -74,6 +74,9 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -168,7 +171,15 @@
                 </p>
             </div>
             <h3 class="paragraphsubheader"></h3>
-            <p class="paragraph"></p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Asteroid_belt">https://en.wikipedia.org/wiki/Asteroid_belt</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/List_of_exceptional_asteroids">https://en.wikipedia.org/wiki/List_of_exceptional_asteroids</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
