--- a/pages/earth.html
+++ b/pages/earth.html
@@ -100,6 +100,9 @@
                 <li>
                     <a href="#Moon">Moon</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -314,7 +317,12 @@
                     The Artemis mission is a follow-up to Appolo, with the uncrewed Artemis 1 already ongoing.
                 </p>
             </div>
-            
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
