--- a/pages/exoplanet.html
+++ b/pages/exoplanet.html
@@ -95,6 +95,9 @@
                 <li>
                     <a href="#Habitability">Habitability</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -193,6 +196,15 @@
                 If a planet is orbiting in the habitable zone of it's host <a href="star.html">star</a>, water could exist in all three states. 
                 Another metric is the size of a planet - planets with sizes similar to Earth are more likely to be similar in other aspects.
             </p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://exoplanets.nasa.gov">https://exoplanets.nasa.gov</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Exoplanet">https://en.wikipedia.org/wiki/Exoplanet</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
