--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -83,6 +83,9 @@
                 <li>
                     <a href="#Exploration">Exploration</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -188,6 +191,12 @@
                 It is planned to get into Mercury orbit in 2025.
                 Two probes will be released to study the planet.
             </p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Mercury_(planet)">https://en.wikipedia.org/wiki/Mercury_(planet)</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
