--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -95,6 +95,9 @@
                 <li>
                     <a href="#SatellitesOfAsteroids">Satellites of asteroids</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -274,6 +277,12 @@
                     90 Antiope is a binary system, where the two bodies are of similar sizes.
                 </p>
             </div>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Natural_satellite">https://en.wikipedia.org/wiki/Natural_satellite</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
