--- a/pages/planet.html
+++ b/pages/planet.html
@@ -98,6 +98,9 @@
                 <li>
                     <a href="#Exoplanets">Exoplanets</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -306,6 +309,12 @@
             <p class="paragraph">
                 The closest exoplanets are located 4.2 light-years from Earth and orbit Proxima Centauri, the closest star to Earth.
             </p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Planet">https://en.wikipedia.org/wiki/Planet</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
