--- a/pages/tno.html
+++ b/pages/tno.html
@@ -88,6 +88,9 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -177,6 +180,12 @@
                     It is a contact binary composed of two conjoined planetesimals.
                 </p>
             </div>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Trans-Neptunian_object">https://en.wikipedia.org/wiki/Trans-Neptunian_object</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
