--- a/pages/star.html
+++ b/pages/star.html
@@ -63,6 +63,9 @@
                 <li>
                     <a href="#Classification">Classification</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -124,6 +127,12 @@
                     </tr>
                 </table>
             </div>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Star">https://en.wikipedia.org/wiki/Star</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
